# learning_cmake

./: README.md  hhh.md
t1/: CMakeLists.txt  README
t1/doc/: hello.txt
t1/src/: CMakeLists.txt  main.cpp
t2/: CMakeLists.txt
t2/lib/: CMakeLists.txt  hello.cpp  hello.h  libhello.so.1.2
t3/: CMakeLists.txt
t3/src/: CMakeLists.txt  main.cpp
