PROJECT (HELLO)
CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

ADD_SUBDIRECTORY(src bin)

MESSAGE(STATUS "**** message:this is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "**** message:this is SOURCE dir " ${PROJECT_SOURCE_DIR})


INSTALL(FILES README DESTINATION share/doc/cmake/t2)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)




