SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

ADD_EXECUTABLE(hello main.cpp)

INSTALL(TARGETS hello 
 	RUNTIME DESTINATION bin
)

#INSTALL(TARGETS hello mylib mystaticlib
# 	RUNTIME DESTINATION bin
# 	LIBRARY DESTINATION lib
#	ARCHIVE DESTINATION libstatic
#)


