# coding=utf-8
SET(LIBHELLO_SRC hello.cpp)

ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
#静态库不能设置与动态库同一名字，需要做如下设置，使得共享库和静态库名字统一
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")


SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)

GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)
MESSAGE(STATUS "**** this is the hello_static OUTPUT_NAME:" ${OUTPUT_VALUE})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
#ADD_LIBRARY(hello SHARED hello.cpp)

INSTALL(TARGETS hello hello_static
       LIBRARY DESTINATION lib
       ARCHIVE DESTINATION lib
)

INSTALL(FILES hello.h DESTINATION include/hello)


